# coin-bot

./: Cargo.toml
src/: jwt.rs  main.rs  upbit.rs
