[package]
name = "coin-bot"
version = "0.1.0"
authors = ["raravel <youn@tree-some.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde_json = "1.0"
hmac-sha256 = "0.1.7"
base64 = "0.13.0"
hex = "0.4.3"
urlencoding = "1.1.1"
colored = "2"
